inst/shiny/www/main.css
/* ... */
.modal-xl .modal-body {
  max-height: 75vh;
  overflow-y: auto;
}

/* gifs */
.gif-container {
  text-align: center;
  border-radius: 1em;
  box-shadow: 0 0 1em rgba(0, 0, 0, 0.1);
  transition: transform 0.3s ease-in-out;
  background-color: #ffffff;
}

.gif-container img {
  width: calc(100% - 2em);
  border: 1px solid #ddd;
  border-radius: 1em;
  margin: 1em;
}

.gif-container h1 {
  margin-bottom: 0px;
  margin-top: 0px;
  font-weight: bold;
  font-size: 24px;
  /* Larger font size for titles */
  color: #0056b3;
  /* More vibrant color */
  text-align: center;
  /* Center the title */
  font-family: "Arial", sans-serif;
  /* Use a more attractive font */
  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
  /* Add a subtle text shadow */
}

.gif-container:hover {
  transform: scale(1.05);
}

/* general reactable rules */
.rt-table input {
  width: 100%;
  text-align: center;
}

.rt-table .rt-select-input[type="checkbox"] {
  position: relative;
  top: 3px;
}

/* custom inline selection module */
.inline-select-input > div,
.inline-select-input > div > div {
  width: 5em !important;
  text-align: left !important;
  display: inline-block !important;
}

/* parameter selection gird */
.nca-pill-grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
  gap: 10px;
}

.nca-pill {
  background-color: #e0ecff;
  padding: 6px 10px;
  border-radius: 6px;
  font-size: 0.9em;
  text-align: center;
}

.tlg-module {
  margin-top: 1em;
  /* Well containing tabs for each tlg */
  /* tlg tab */
}

.tlg-module div.well {
  height: min-content;
}

.tlg-module .sw-dropdown {
  font-size: 1em;
  display: block;
  position: relative;
  top: -2.5em;
  right: -0.5em;
  margin-bottom: -1.25em;
  height: 2em;
  width: 2em;
  float: right;
}

.tlg-module .sw-dropdown-in {
  width: 200px;
}

.tlg-module .tlg-widgets-container {
  display: flex;
  justify-content: space-around;
  align-items: baseline;
  margin-bottom: 1em;
}

.tlg-module h1.tlg-group-label {
  font-weight: bold;
  font-size: 2rem;
  border-bottom: thin solid #337ab7;
  border-radius: 0 0 0.25em 0;
  margin-top: 0.75em;
}

.tlg-module .tlg-options-container > button {
  width: 90%;
  margin-left: 5%;
  margin-top: 1em;
  padding: 0.75em 0 0.75em 0;
}

.tlg-module .tlg-options-container .form-group.shiny-input-container {
  margin-bottom: 0.5em;
}

.tlg-module .tlg-options-container .form-group.shiny-input-container label {
  margin: 0;
}

.modal-dialog:has(.tlg-option-table) {
  max-width: none;
  margin-left: 1em;
  margin-right: 1em;
}

/* styling for widgets at the top of the Settings page */
div[data-value="Settings"] > div.row {
  margin: 1em;
}

div[data-value="Settings"] > div.row div:has(a) {
  text-align: center;
}

div[data-value="Settings"] > div.row a {
  margin-top: 2em;
}

.content-container {
  height: 100%;
}

.page-container {
  height: 100%;
}

.bslib-sidebar-layout > .main {
  padding: 0;
}

.bslib-sidebar-layout {
  --_sidebar-width: 170px !important;
}

.sidebar .sidebar-content {
  padding-left: 0 !important;
  padding-right: 0 !important;
  display: flex !important;
  flex-direction: column !important;
  height: 100% !important;
}

.sidebar .sidebar-content .row > :nth-child(2) {
  display: none;
}

.sidebar .sidebar-content .row {
  flex: 1;
  display: flex !important;
  flex-direction: column !important;
}

.sidebar .sidebar-content .row > :first-child {
  width: 100%;
  flex: 1;
  display: flex !important;
  flex-direction: column !important;
  padding-left: 0;
  padding-right: 0;
}

.sidebar .sidebar-content .row > :first-child > ul {
  flex: 1;
  display: flex !important;
  flex-direction: column !important;
}

.sidebar .sidebar-content .row > :first-child > ul > li:last-child {
  margin-top: auto;
}

.sidebar .sidebar-content .row > :first-child > ul > li > a {
  padding-left: 30px;
  padding-right: 30px;
  color: #21201f;
}

.sidebar .sidebar-content .row > :first-child > ul > li > a.active {
  background-color: #E7ECFA;
  color: #21201f;
}

.sidebar .sidebar-content .row > :first-child > ul > li > a.disabled {
  color: #c0c0c0;
}

.slope-selector-module {
  padding: 1em;
  min-height: calc(100vh - 150px);
  /* Style each group of widgets */
}

.slope-selector-module .sw-dropdown {
  float: right;
}

.slope-selector-module .sw-dropdown-content {
  width: 50em;
}

.slope-selector-module .sw-dropdown-content h1 {
  text-align: center;
}

.slope-selector-module .sw-dropdown-content p {
  text-align: justify;
}

.slope-selector-module .sw-dropdown-content .gif-grid {
  display: grid;
  grid-template-columns: auto auto;
  column-gap: 2em;
  row-gap: 2em;
}

.slope-selector-module .reactable {
  padding: 1em;
  margin-bottom: 2em;
}

.slope-selector-module .slope-widgets-container {
  display: flex;
  align-items: left;
  justify-content: space-around;
  gap: 1rem;
  width: 100%;
  max-width: 100vw;
}

.slope-selector-module .plot-widgets-container {
  display: flex;
  align-items: baseline;
  justify-content: space-around;
  wrap: nowrap;
  gap: 1rem;
  width: 100%;
  max-width: 100vw;
}

.slope-selector-module .plot-widgets-container-2 {
  position: fixed;
  bottom: 0;
  width: 75%;
  background: rgba(255, 255, 255, 0.6);
  backdrop-filter: blur(1px);
  padding: 10px;
  z-index: 1000;
  border-top: 1px solid #dadada;
  display: flex;
  justify-content: space-around;
  align-items: center;
}

.slope-selector-module .plot-widget-group {
  display: flex;
  align-items: center;
  gap: 0.75rem;
  flex: 1;
  min-width: 12rem;
}

.slope-selector-module .inline-select-input > div {
  width: 5em !important;
  text-align: left !important;
}

.slope-selector-module .slope-plots-container {
  margin-top: 2em;
  min-height: calc(100vh - 220px);
  margin-bottom: 2em;
}

.slope-selector-module .slope-plots-container.multiple {
  margin-top: 2em;
  margin-bottom: 2em;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(33em, 1fr));
  min-height: calc(100vh - 220px);
  gap: 1rem;
}
/* ... */

